[IMP] Add text for colombia

--- a/ikatech_invoice/report/invoice_report.xml
+++ b/ikatech_invoice/report/invoice_report.xml
@@ -955,6 +955,11 @@
                         <strong t-field="o.company_id.business_name"/>
                     </div>
                 </div>
+                <div class="row">
+                     <div class="col-12">
+                         <p>Metodo de pago: Transferencia bancaria a la cuenta corriente 115 663 15 841 Bancolombia</p>
+                     </div>
+                </div>
             </t>
             <t t-if="is_cfdi_signed">
                 <div class="row" id="complement">
