--- a/ikatech_invoice/report/invoice_report.xml
+++ b/ikatech_invoice/report/invoice_report.xml
@@ -957,7 +957,7 @@
                 </div>
               <t t-if="o.company_id.id == 5">
                 <div class="row">
-                     <div class="col-12">s
+                     <div class="col-12">
                          <span>Metodo de pago: Transferencia bancaria a la cuenta corriente 115 663 15 841 Bancolombia</span>
                      </div>
                 </div>
