[IMP] Change address ADDIUVA Bolivia, Invoice format

--- a/l10n_bo_edi_extended/reports/invoice_report_template_extended.xml
+++ b/l10n_bo_edi_extended/reports/invoice_report_template_extended.xml
@@ -30,8 +30,8 @@
                                 <strong>
                                     <p>Servicios de Asistencia Tecnica Concentra Asistencia S.A</p>
                                 </strong>
-                                <p style="font-size:11px;">Av. las Ramblas Edif. Cubo ll Piso 8 Ofic. 1 Barrio
-                                    Equipetrol Norte Cuarto Anillo<br/>Tel.: 3630000<br/>Santa Cruz - Bolivia
+                                <p style="font-size:11px;">Calle Los Cedros, Edif. Alas I Piso 5 Ofic. Norte Barrio Sararí
+                                    <br/>Tel.: 3630000<br/>Santa Cruz - Bolivia
                                 </p>
                                 <br/>
                                 <br/>
