[IMP] Change address ADDIUVA Bolivia, Invoice format 2

--- a/l10n_bo_edi_extended/reports/invoice_report_template_extended.xml
+++ b/l10n_bo_edi_extended/reports/invoice_report_template_extended.xml
@@ -30,7 +30,7 @@
                                 <strong>
                                     <p>Servicios de Asistencia Tecnica Concentra Asistencia S.A</p>
                                 </strong>
-                                <p style="font-size:11px;">Calle Los Cedros, Edif. Alas I Piso 5 Ofic. Norte Barrio Sararí
+                                <p style="font-size:11px;">Calle Los Cedros, Edif. Alas I Piso 5 Ofic. Norte Barrio Sirarí
                                     <br/>Tel.: 3630000<br/>Santa Cruz - Bolivia
                                 </p>
                                 <br/>
